added inverted utility class

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -75,6 +75,10 @@ body {
     text-transform: uppercase;
     font-weight: $fw-700;
     color: $color-primary-400;
+
+    .inverted & {
+      color: $color-neutral-100;
+    }
   }
 
   &__feature-list {
@@ -113,4 +117,14 @@ body {
   padding: 1em 1.5em;
 
   justify-self: center;
+
+  .inverted & {
+    background: $color-neutral-100;
+    color: $color-primary-400;
+  }
+}
+
+.inverted {
+  background: $color-primary-400;
+  color: $color-neutral-100;
 }
